# haskell-project-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ci.dhall  ci.sh  default.nix  new  project.cabal  project.nix  test.cabal  try.cabal
.github/workflows/: ci.sh  ci.yaml
src/: Template.hs
test/: ParseSpec.hs  SpecHelper.hs
