name:                @project@
version:             0.1.0.0
synopsis:            Example project
-- description:         Something a bit longer
homepage:            https://github.com/sorki/@project@
license:             BSD-3-Clause
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Data.Cayene
--                      , Data.Cayene.Types
--   build-depends:       base >= 4.7 && < 5
--                      , binary
--                      , bytestring
--                      , text
--   default-language:    Haskell2010

executable @project@-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
--                     , @project@
  default-language:    Haskell2010


-- test-suite @project@-tests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       --ParseSpec
--                        SpecHelper
--   build-depends:       base >= 4.7 && < 5
--                      , @project@
--                      , hspec
--                      , base16-bytestring
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/@project@
